--- a/console/src/main/webapp/components/groups/groups.html
+++ b/console/src/main/webapp/components/groups/groups.html
@@ -1,22 +1,35 @@
 <h4 ng-if="isRoot">Groups</h4>
 
-<a ng-if="enableBack" class="btn btn-default btn-xs" ng-link="users({groupid: prefix.parent})">
-  «
-</a>
-<span ng-if="enableBack">{{prefix.cn || 'Tous'}}</span>
+<input ng-if="isRoot" ng-model="groups.q" class="form-control" placeholder="Search groups">
 
-<div ng-repeat="group in groups.tree" ng-if="groups.filter(group, groups.activeGroup)">
+<div ng-if="groups.q == ''">
 
-  <strong ng-if="(groups.activeGroup.cn == group.cn) && (group.children.length == 0)">
-    {{::group | unprefix: prefix}} <span class="badge">{{::group.users.length}}</span>
-  </strong>
-  <a ng-link="users({groupid: group.cn})" title={{::group.description}}
-      ng-if="(groups.activeGroup.cn != group.cn) && (prefix.cn.indexOf(group.cn)!=0)">
-    <span ng-if="group.children.length > 0">+</span>
-    {{::group | unprefix: prefix}} <span class="badge">{{::group.users.length}}</span>
+  <a ng-if="enableBack" class="btn btn-default btn-xs" ng-link="users({groupid: prefix.parent})">
+    «
   </a>
+  <span ng-if="enableBack">{{prefix.cn || 'Tous'}}</span>
 
-  <groups groups="group.children" active-group="groups.activeGroup" index="groups.index"
-      ng-if="groups.isExpanded(group, groups.activeGroup)"></groups>
+  <div ng-repeat="group in groups.tree" ng-if="groups.filter(group, groups.activeGroup)">
 
+    <strong ng-if="(groups.activeGroup.cn == group.cn) && (group.children.length == 0)">
+      {{::group | unprefix: prefix}} <span class="badge">{{::group.users.length}}</span>
+    </strong>
+    <a ng-link="users({groupid: group.cn})" title={{::group.description}}
+      ng-if="(groups.activeGroup.cn != group.cn) && (prefix.cn.indexOf(group.cn)!=0)">
+      <span ng-if="group.children.length > 0">+</span>
+      {{::group | unprefix: prefix}} <span class="badge">{{::group.users.length}}</span>
+    </a>
+
+    <groups groups="group.children" active-group="groups.activeGroup" index="groups.index"
+    ng-if="groups.isExpanded(group, groups.activeGroup)"></groups>
+
+  </div>
+
+</div>
+
+<div ng-repeat="(key, group) in groups.index" ng-if="isRoot && groups.q != ''">
+  <a ng-link="users({groupid: group.cn})" title={{::group.description}}
+      ng-if="group.cn.toLowerCase().indexOf(groups.q.toLowerCase()) >= 0">
+    {{::group.cn}} <span class="badge">{{::group.users.length}}</span>
+  </a>
 </div>
