Fix stats title

--- a/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
@@ -9,7 +9,7 @@
     </button>
   </div>
 
-  <h5 translate>analytics.requests</h5>
+  <h5>{{stats.title | translate}}</h5>
 
   <div class="chartist" ng-show="stats.view=='graph'"></div>
 
