--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -5,10 +5,21 @@ body {
   body {
     padding-top: 70px;
   }
+  .panel .panel-body {
+    min-height: 22em;
+  }
 }
 
 groups input {
   margin-bottom: 1em;
+}
+
+
+.container .nav {
+  width         : 130%;
+  border        : 1px solid rgb(221, 221, 221);
+  border-radius : 5px;
+  margin-top    : 2.75em;
 }
 
 // MESSAGES
